--- a/test.ipynb
+++ b/test.ipynb
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,9 @@
       "[5 6 7 8 9]\n",
       "[[1 2 3 4]]\n",
       "[[1 2 3 5 6]]\n",
-      "[0 1 2 3 4 5 6 7 8 9]\n"
+      "[[[0 1 2 3 4 5 6 7 8 9]\n",
+      "  [0 1 2 3 4 5 6 7 8 9]\n",
+      "  [0 1 2 3 4 5 6 7 8 9]]]\n"
      ]
     }
    ],
@@ -447,7 +449,113 @@
     "t0, t1, t2 = Tensor([[1, 2]]), Tensor([[3]]), Tensor([[5, 6]])\n",
     "print(t0.cat(t1, t2, dim=1).numpy())\n",
     "\n",
-    "print(Tensor.arange(10).numpy())"
+    "print(np.tile(np.arange(10), (3, 1)).reshape(1, 3, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8000, 6)\n",
+      "[[9. 5. 8. 8. 1. 8.]\n",
+      " [0. 2. 5. 1. 0. 5.]\n",
+      " [4. 3. 2. 3. 0. 6.]\n",
+      " [8. 7. 6. 2. 1. 4.]\n",
+      " [5. 9. 0. 6. 0. 6.]\n",
+      " [5. 5. 1. 8. 0. 7.]\n",
+      " [8. 1. 8. 8. 1. 6.]\n",
+      " [6. 6. 9. 3. 1. 5.]\n",
+      " [3. 4. 0. 7. 0. 4.]\n",
+      " [1. 2. 7. 7. 0. 8.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "def make_dataset():\n",
+    "  ds = []\n",
+    "  for i in range(100):\n",
+    "    for j in range(100):\n",
+    "      s = i+j\n",
+    "      ds.append([i//10, i%10, j//10, j%10, s//100, (s//10)%10, s%10])\n",
+    "  random.shuffle(ds)\n",
+    "  ds = np.array(ds).astype(np.float32)\n",
+    "  ds_X = ds[:, 0:6]\n",
+    "  ds_Y = np.copy(ds[:, 1:])\n",
+    "  ds_X_train, ds_X_test = ds_X[0:8000], ds_X[8000:]\n",
+    "  ds_Y_train, ds_Y_test = ds_Y[0:8000], ds_Y[8000:]\n",
+    "  return ds_X_train, ds_Y_train, ds_X_test, ds_Y_test\n",
+    "\n",
+    "X_train, Y_train, X_test, Y_test = make_dataset()\n",
+    "print(X_train.shape)\n",
+    "print(X_train[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8000, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('littleshakespeare/input.txt') as file:\n",
+    "    text = file.read()    # data loading\n",
+    "vocab = sorted(list(set(text)))    # finding and sorting all unique charaters in the data\n",
+    "ctoi = {c:i for i,c in enumerate(vocab)}    # map characters to integers\n",
+    "itoc = {i:c for i,c in enumerate(vocab)}    # map integers to characters\n",
+    "encode = lambda clist:         [ctoi[c] for c in clist]     # converts string to list of integers\n",
+    "decode = lambda ilist: ''.join([itoc[i] for i in ilist])    # converts list of integers to string\n",
+    "\n",
+    "n = int(0.9*len(text))    # first 90% of data is the training set, rest is test set\n",
+    "train_data, val_data = encode(text[:n]), encode(text[n:])    # creates training set and test set\n",
+    "\n",
+    "batch_size = 8000    # number of training examples per forward pass\n",
+    "block_size = 6    # max context length for predictions\n",
+    "def get_batch(data):\n",
+    "    xi = [random.randint(0, len(data)-block_size-1) for i in range(batch_size)]\n",
+    "    xs = [data[i:i+block_size] for i in xi]\n",
+    "    ys = [data[i+1:i+1+block_size] for i in xi]\n",
+    "    return np.array(xs), np.array(ys) # (batch_size, block_size)\n",
+    "\n",
+    "X_train, Y_train = get_batch(train_data)\n",
+    "print(X_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2]\n",
+      "(1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tinygrad import Tensor\n",
+    "test = [1]*10\n",
+    "print(test)\n",
+    "test.append(2)\n",
+    "print(test)\n",
+    "print(Tensor([test[9:]]).shape)"
    ]
   }
  ],
