--- a/test.ipynb
+++ b/test.ipynb
@@ -563,6 +563,25 @@
     "print(test)\n",
     "print(Tensor([test[9:]]).shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "butts\n"
+     ]
+    }
+   ],
+   "source": [
+    "flag = True\n",
+    "test = lambda text: print(text) if flag else lambda text: print\n",
+    "test(\"butts\")"
+   ]
   }
  ],
  "metadata": {
